[gd_scene format=3 uid="uid://f2jxqr5e7i5e"]

[ext_resource type="Script" uid="uid://cvstlrlxs5iui" path="res://sources/actor/entity/components/Interactive.gd" id="1_b3bk6"]
[ext_resource type="Theme" uid="uid://dhb6h35g1bk0x" path="res://data/themes/DefaultTheme.tres" id="1_wehdi"]
[ext_resource type="PackedScene" uid="uid://c0wuhrlsdwo8s" path="res://presets/gui/HealthBar.tscn" id="2_5opbf"]
[ext_resource type="PackedScene" uid="uid://08v0t5i6hvef" path="res://presets/effects/particles/Emote.tscn" id="2_gghi1"]
[ext_resource type="Script" uid="uid://cbedrk7hxvhfu" path="res://sources/actor/entity/components/InteractiveSkillPreview.gd" id="5_mia2y"]

[node name="Interactions" type="Control" unique_id=281545227]
z_as_relative = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_b3bk6")

[node name="TopOffset" type="Node2D" parent="." unique_id=1944343598]
z_index = 255
position = Vector2(0, -64)

[node name="Emote" parent="TopOffset" unique_id=1126513509 instance=ExtResource("2_gghi1")]
position = Vector2(0, -16)
emitting = false
one_shot = true
local_coords = true

[node name="TopBox" type="VBoxContainer" parent="TopOffset" unique_id=1764552135]
clip_contents = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_wehdi")
alignment = 1

[node name="Panel" type="PanelContainer" parent="TopOffset/TopBox" unique_id=2049547634]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"ChatContainer"

[node name="SpeechContainer" type="VBoxContainer" parent="TopOffset/TopBox/Panel" unique_id=864848248]
layout_mode = 2
alignment = 1

[node name="UnderBox" type="VBoxContainer" parent="." unique_id=2073778132]
z_index = 255
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 16.0
offset_right = 20.0
offset_bottom = 56.0
grow_horizontal = 2

[node name="Name" type="Label" parent="UnderBox" unique_id=1736490670]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_wehdi")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
horizontal_alignment = 1

[node name="HealthBar" parent="UnderBox" unique_id=1136536829 instance=ExtResource("2_5opbf")]
visible = false
custom_minimum_size = Vector2(56, 4)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SkillPreview" type="Control" parent="." unique_id=1781727879]
z_index = 255
anchors_preset = 0
scale = Vector2(1, 0.7)
script = ExtResource("5_mia2y")
